# opendeck-stream-dock-xl

./: .cliffignore  .gitignore  40-opendeck-stream-dock-xl.rules  CHANGELOG.md  Cargo.toml  Dockerfile.macos-cross  README.md  deny.toml  flake.nix  justfile  manifest.json
src/: device.rs  inputs.rs  led_config.rs  main.rs  mappings.rs  watcher.rs
