[package]
name = "opendeck-akp05"
version = "0.10.1"
edition = "2024"
license = "GPL-3.0"

[dependencies]
data-url = "0.3.1"
dirs = "5"
env_logger = "0.11"
futures-lite = "2.6.0"
image = { version = "0.25.6", default-features = false, features = [
  "bmp",
  "jpeg",
] }
log = "0.4.27"
mirajazz = "0.9.0"
openaction = "1.1.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
toml = "0.8"

[patch.crates-io]
mirajazz = { git = "https://github.com/ambiso/mirajazz.git" }
