[package]
name = "opendeck-stream-dock-xl"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"

[dependencies]
data-url = "0.3"
dirs = "6.0"
env_logger = "0.11"
futures-lite = "2.6"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
log = "0.4"
mirajazz = "0.14"
openaction = "2.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "1.1"


